# one_day_game

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.hpp  main.cpp
